JavaScripit String Concatenate

--- a/Basic_HTML_2.html
+++ b/Basic_HTML_2.html
@@ -9,6 +9,7 @@
     <button onclick="firstFunction()" id="button" style="color:orange">
         How are you doing?
     </button>
+    <p id="Concatenate" onclick="myFunction()">fdsf</p>
 
 </body>
 </html>
