--- a/Basic_HTML_3.html
+++ b/Basic_HTML_3.html
@@ -6,7 +6,14 @@
     <script src="./JavaScript/Basic_JavaScript_3.js"></script>
 </head>
 <body>
-    <p id="Math" onload="func()"></p>
+    <p id="Math" onclick="add()">"</p>
+    <p id="multi" onclick="multi()">'</p>
+    <p id="div" onclick="div()">'</p>
+    <p id="solve" onclick="solve()">'</p>
+    <p id="remainder" onclick="function_for_remainder()">Test Remainder</p>
+    <p id="neg" onclick="negative()">27</p>
+    <p id="add" onclick="addone()">27 + 1 =</p>
+    <p id="sub" onclick="subone()">27 - 1 =</p>
 
 </body>
 </html>
