--- a/Basic_HTML_7.html
+++ b/Basic_HTML_7.html
@@ -6,8 +6,13 @@
     <script src="./JavaScript/Basic_JavaScript_7.js"></script>
 </head>
 <body>
-    <button onclick="myFunction()">Click Here.</button>
-    <p id="Keywords_and_Constructors"></p>
-
+    <button onclick="Right()">Click Here.</button>
+    <p id="log">25 + 34 = ?</p>
+    <button onclick="Not_Right()">Click Here.</button>
+    <p id="log2">34 + 18 = ?</p>
+    <p id="time" onclick="get_time()">Get the time.</p>
+    <p id="enter_id">Enter your age</p>
+    <input id="age" type="text" value="">
+    <button type="submit" onclick="age_check()">Submit</button>
 </body>
 </html>
