--- a/Basic_HTML_9.html
+++ b/Basic_HTML_9.html
@@ -4,34 +4,34 @@
     <meta charset="UTF-8">
     <title>SlideShow</title>
     <script src="./JavaScript/Basic_JavaScript_9.js"></script>
-    <script src="./CSS/Basic_CSS_1.css"></script>
+    <link rel="stylesheet" href="./CSS/Basic_CSS_1.css">
 </head>
 <body>
 
 
     <div class="slideshow-container">
         
-        <div class="mySlides">
+        <div class="mySlides fade">
             <div class="numbertext">1 / 4</div>
-            <img src="./Images/slide_1.jpg" alt="Zion National Park" style="height: 575px; width: 850px;">
+            <img src="./Images/slide_1.jpg" alt="Zion National Park" style="height: 475px; width: 100%;">
             <div class="text">Zion National Park</div>
         </div>
 
-        <div class="mySlides">
+        <div class="mySlides fade">
             <div class="numbertext">2 / 4</div>
-            <img src="./Images/slide_2.jpg" alt="Glacier National Park" style="height: 575px; width: 850px;">
+            <img src="./Images/slide_2.jpg" alt="Glacier National Park" style="height: 475px; width: 100%;">
             <div class="text">Glacier National Park</div>
         </div>
 
-        <div class="mySlides">
+        <div class="mySlides fade">
             <div class="numbertext">3 / 4</div>
-            <img src="./Images/slide_3.jpg" alt="Arches National Park" style="height: 575px; width: 850px;">
+            <img src="./Images/slide_3.jpg" alt="Arches National Park" style="height: 475px; width: 100%;">
             <div class="text">Arches National Park</div>
         </div>
 
-        <div class="mySlides">
+        <div class="mySlides fade">
             <div class="numbertext">4 / 4</div>
-            <img src="./Images/slide_4.jpg" alt="Yosemite National Park" style="height: 575px; width: 850px;">
+            <img src="./Images/slide_4.jpg" alt="Yosemite National Park" style="height: 475px; width: 100%;">
             <div class="text">Yosemite National Park</div>
         </div>
 
@@ -45,7 +45,7 @@
 
     <!-- THE DOTS/CIRCLES -->
 
-    <div style="text-align: center;">
+    <div style="text-align:center;">
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
